--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,31 @@ Pods/ProgressHUD/ProgressHUD/ProgressHUD/ProgressHUD.bundle/progresshud-success@
 Pods/Target Support Files/ProgressHUD/ProgressHUD-dummy.m
 Pods/Target Support Files/ProgressHUD/ProgressHUD-prefix.pch
 Pods/Target Support Files/ProgressHUD/ProgressHUD.xcconfig
+Pods/ActionSheetPicker-3.0/LICENSE
+Pods/ActionSheetPicker-3.0/README.md
+Pods/ActionSheetPicker-3.0/Pickers/AbstractActionSheetPicker.h
+Pods/ActionSheetPicker-3.0/Pickers/AbstractActionSheetPicker.m
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetCustomPicker.h
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetCustomPicker.m
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetCustomPickerDelegate.h
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetDatePicker.h
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetDatePicker.m
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetDistancePicker.h
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetDistancePicker.m
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetLocalePicker.h
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetLocalePicker.m
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetMultipleStringPicker.h
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetMultipleStringPicker.m
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetPicker.h
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetStringPicker.h
+Pods/ActionSheetPicker-3.0/Pickers/ActionSheetStringPicker.m
+Pods/ActionSheetPicker-3.0/Pickers/DistancePickerView.h
+Pods/ActionSheetPicker-3.0/Pickers/DistancePickerView.m
+Pods/ActionSheetPicker-3.0/Pickers/SWActionSheet.h
+Pods/ActionSheetPicker-3.0/Pickers/SWActionSheet.m
+Pods/Pods.xcodeproj/xcuserdata/robincua.xcuserdatad/xcschemes/ActionSheetPicker-3.0.xcscheme
+Pods/Pods.xcodeproj/xcuserdata/robincua.xcuserdatad/xcschemes/Masonry.xcscheme
+Pods/Pods.xcodeproj/xcuserdata/robincua.xcuserdatad/xcschemes/ProgressHUD.xcscheme
+Pods/Target Support Files/ActionSheetPicker-3.0/ActionSheetPicker-3.0-dummy.m
+Pods/Target Support Files/ActionSheetPicker-3.0/ActionSheetPicker-3.0-prefix.pch
+Pods/Target Support Files/ActionSheetPicker-3.0/ActionSheetPicker-3.0.xcconfig
